[package]
name = "enowars8-service-wonki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
warp = { version = "0.3.7", features = ["tls"] }
inline-python = "0.12.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8.5"
uuid = {version = "1.8.0", features = ["v4", "fast-rng"]}
sha2 = "0.10.8"
hex = "0.4.3"