[package]
name = "forum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
itertools = "0.13.0"
num-bigint = { version = "0.4.5", features = ["rand"] }
rand = "0.8.5"
regex = "1.10.5"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
